--- a/package.json
+++ b/package.json
@@ -1,39 +1,21 @@
 {
   "name": "tabs",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "tabs with ",
-  "main": "index.js",
+  "main": "src/scripts/index.bundle.js",
   "scripts": {
     "gulp": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "LUMI",
   "license": "ISC",
-  "dependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
+  "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-jspm": "^0.5.12",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.8",
-    "jspm": "^0.16.39",
-    "webpack": "^1.13.1"
-  },
-  "jspm": {
-    "directories": {
-      "packages": "lib/Scripts/jspm_packages"
-    },
-    "configFile": "lib/Scripts/config.js",
-    "dependencies": {
-      "jquery/jquery": "github:jquery/jquery@^3.0.0"
-    },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
-    }
+    "gulp-watch": "^4.3.8"
   }
 }
